test/semantic_errors/invalid_assignment11.mc
void main() {
    int a[5];
    int b[6];
    a = b; /* cannot assign array to array */
}